# mouse-lab

./: .gitignore  README.md  lua_tests.library  macro_system.lua  weapons_extractor.py  wheel_relay.py
.claude/: settings.local.json
.github/workflows/: build.yml
app/: main.py
arduino/mouse_test_injector/: mouse_test_injector.ino
native/: CMakeLists.txt  embed_weapons.py
native/src/: main.cpp  serial_port.cpp  serial_port.h  weapons_embedded.h
weapons/: AK47.lua  AK47_holosight.lua  HMLMG.lua  HMLMG_holosight.lua  LR300.lua  LR300_holosight.lua  M249_holosight.lua  MP5A4.lua  MP5A4_holosight.lua  SAR.lua  SMG.lua  SMG_holosight.lua  THOMPSON.lua  THOMPSON_holosight.lua  ak.json  akholo.json  mp5a4.json  mp5a4hholo.json  tomy.json  tomyholo.json
